@startuml
' ======= layout =========
skinparam backgroundColor #fcf9ea
skinparam titleBorderRoundCorner 15
skinparam titleFontSize 30
skinparam classAttributeIconSize 0
skinparam titleFontName Arial Black
skinparam titleFontColor #f8a978
skinparam roundcorner 20
skinparam stereotypeCBackgroundColor ffc5a1
skinparam class {

ArrowColor ffc5a1
BorderColor White
BackgroundColor badfdb
}


' ======= title =========
center header


endheader
title <b>US2002 - Class Diagram\n

' ======= classes =========
class AddAGVController{
+addAGV(identifier, shortDesc, model, maxWeight, maxVolume, agvDock)
}
class AddAGVUI{
}
class AGVManagementService{
+AGVManagementService(AGVRepository)
+addNewAGV(identifier, shortDesc, model, maxWeight, maxVolume, agvDock)
+allAGVs()

}
class ListAGVDocksController {
+allAGVDocks()
}
class AGVDockManagementService{
 +AGVDockManagementService(AGVDockRepository)
 +allAGVDocks()
}
class AGVDockRepository{
+findAll()
}
class AGVRepository{
+save(AGV)
}
class AGV{
+AGV(identifier, shortDesc, model, maxWeight, maxVolume, agvDock)
+equals(o)
+identity()
+shortDesc()
+model()
+maxWeight()
+maxVolume()
+AGVDockId()
}

AddAGVUI ..> AddAGVController
AddAGVUI ..> ListAGVDocksController

ListAGVDocksController ..> AGVManagementService
AddAGVController ..> AGVDockManagementService
AGVManagementService ..> AGVRepository
AGVManagementService ..> AGV
AGVRepository ..> AGV
AGVDockManagementService ..> AGVDockRepository
@enduml